10-10-2021 PSS fixed issue #147 Message when saving parameters not clearly readable 10-10-2021 PSS fixed issue #148 Waiting label was not properly visible when bar in editmode is orange

--- a/src/translationFillerStyle.css
+++ b/src/translationFillerStyle.css
@@ -860,3 +860,7 @@ button.save-button.ready {
 }
 
 /** End of cuteAlert **/
+.panel-header__bubble--waiting {
+    color: #000000 !important;
+    border-color: #000000 !important;
+}
